# stabssm-dags

./: .dockerignore  .gitignore  Dockerfile.jobs  docker-compose.yaml  main.py  pyproject.toml
dags/bumawiki/bronze/: collect_docs.py
dags/bumawiki/gold/: docs.py  load_to_neo4j.py
dags/bumawiki/silver/: docs.py
dags/maintenance/: iceberg_gc.py
dags/newslatter/bronze/: collect_it_news.py  collect_news.py
dags/newslatter/gold/: it_news.py  news.py
dags/newslatter/silver/: it_news.py  news.py
dags/wanted/bronze/: collect_jobs.py
dags/wanted/gold/: jobs.py
dags/wanted/silver/: jobs.py
postgres-init/: 01-upsert-rule.sql
scripts/: generate_gdrive_token.py  init_variables.sh
src/common/config/: glue.py  neo4j.py  newslatter.py  openai.py  openrouter.py  s3.py
src/common/const/: year_established.py
src/common/util/: bssm_generation_calculator.py  codec.py  dict.py
src/core/: academic_calendar.py  crawler.py  jobs.py  linkedin.py  llm.py  requester.py
src/core/bumawiki/: model.py
src/core/client/: storage.py
src/core/newslatter/: model.py  scorer.py
src/core/schoolwiki/: model.py
src/dependencies/: llm.py  storage_client.py
src/dependencies/repository/: bumawiki_docs.py  bumawiki_docs_raw.py  bumawiki_graph.py  bumawiki_neo4j_edge.py  bumawiki_neo4j_node.py  newslatter_it_gold_reader.py  newslatter_it_news.py  newslatter_it_news_gold.py  newslatter_it_news_raw.py  newslatter_it_news_silver.py  newslatter_news.py  newslatter_news_gold.py  newslatter_news_raw.py  (+6 more)
src/infra/: bssm_academi_calender.py  duckdb.py  iceberg.py  neo4j.py
(+120 files in other folders)
