[project]
name = "stabssm-dags"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.7",
    "apache-airflow-providers-docker>=4.5.2",
    "boto3>=1.42.51",
    "duckdb>=1.2.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "playwright>=1.58.0",
    "polars>=1.38.1",
    "neo4j>=5.0.0",
]
